# trading

./: .gitignore  Dockerfile  ENV_TRADING_CLOUD.postman_environment.json  ENV_TRADING_LOCAL.postman_environment.json  README.md  azure-pipelines.yml  changelog  collection.json  docker-compose.yml  requirements.txt  run_all.bat  setup.cfg  setup.py
tests/: conftest.py  test_trading_signal.py
trading/: main.py
trading/controllers/: trading_signal_controller.py
trading/db/: connection.py
trading/models/: trading_signal_model.py
trading/views/: trading_signal_view.py
