[metadata]
name = pnqa_agents
version = 0.2.4
description = pnqa_agents
author = Desarrollo NQ Artificial
author_email = desarrollo@nqartificial.com
license = Private

[flake8]
max-line-length = 100
exclude = venv, .git, .gitignore, __pycache__, .pytest_cache, usr

[pylint]
ignore = venv,.git,.gitignore,__pycache__,.pytest_cache

[bandit]
exclude_dirs = ["venv", ".git",".gitignore","__pycache__",".pytest_cache"]

[coverage:run]
omit =
    app/bd/*
    /usr/lib/*

[tool:pytest]
addopts = --maxfail=2 --disable-warnings